trunk/Archive2/63/7068976808ae8a/output
main.cpp: In lambda function:
main.cpp:8:21: error: invalid conversion from 'int*' to 'int' [-fpermissive]
         close(handle);
                     ^
main.cpp: In function 'int main()':
main.cpp:11:5: error: 'unique_ptr' is not a member of 'std'
     std::unique_ptr<int, handle_deleter> uptr
     ^
main.cpp:11:21: error: expected primary-expression before 'int'
     std::unique_ptr<int, handle_deleter> uptr
                     ^
