trunk/Archive2/63/7068976808ae8a/main.cpp
#include <sys/stat.h>
#include <fcntl.h>
#include <unistd.h>

int main()
{
    auto handle_deleter = [] (int* handle) {
        close(handle);
    };
    
    std::unique_ptr<int, handle_deleter> uptr
        { open("main.cpp") };
}
